--- a/libro/SFBombeo.tex
+++ b/libro/SFBombeo.tex
@@ -602,7 +602,7 @@ donde $H_{OT}$\nomenclature[Hot]{$H_{OT}$}{Diferencia de cotas entre la salida d
 representa la altura desde la salida del pozo hasta la entrada al
 depósito y $Q_{AP}$\nomenclature[Qap]{$Q_{AP}$}{Caudal aparente}
 el caudal aparente, calculado mediante $Q_{AP}=\alpha\cdot Q_{d}$,
-y $\alpha=\SI[per=reciprocal]{0.047}{\per\hour}$. El cálculo de las
+y $\alpha=1 / 24 = \SI[per=reciprocal]{0.0416}{\per\hour}$. El cálculo de las
 pérdidas de fricción en función del caudal aparente, $H_{f}(Q_{AP})$,
 se realiza recurriendo a las curvas proporcionadas por el fabricante
 de las tuberías o fijando un valor constante. En esta ecuación todas
